[project]
name = "pypile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "art>=6.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "tabulate>=0.9.0",
]

[project.scripts]
pypile = "pypile.cli:pypile_cli"

[dependency-groups]
dev = [
    "meson>=1.7.0",
    "ninja>=1.11.1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
